<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.EditActivity"
    tools:showIn="@layout/activity_edit">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_10"
        android:paddingEnd="@dimen/padding_16"
        android:paddingStart="@dimen/padding_16">

        <RelativeLayout
            android:id="@+id/date_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:addStatesFromChildren="true">


            <TextView
                android:id="@+id/text_journal_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/padding_5"
                tools:text="27/June/2018" />

            <TextView
                android:id="@+id/text_journal_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/padding_5"
                tools:text="11:45" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_entry_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/entry_title_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/edit_entry_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/entry_text_hint"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:minHeight="200dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/background_light"
        android:padding="@dimen/padding_5"
        android:paddingEnd="@dimen/padding_16"
        android:paddingStart="@dimen/padding_16">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:padding="@dimen/padding_5">

            <TextView
                android:id="@+id/text_char_watcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Chars:" />

            <TextView
                android:id="@+id/text_word_watcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Words:" />
        </LinearLayout>


        <ImageButton
            android:id="@+id/btn_done"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/background_light"
            android:contentDescription="@string/done"
            android:src="@drawable/ic_done"
            android:tint="@android:color/background_dark" />
    </RelativeLayout>

</RelativeLayout>